{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 22,
  "lineage": "179ac3e4-b8e1-d882-8e95-9baf8a7d2c3c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:security-group/sg-052f851228e7d62d4",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052f851228e7d62d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH only from internal VPC clients",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "us-east-1-allow_ssh_priv",
            "name_prefix": "",
            "owner_id": "149480845956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1-allow_ssh_priv"
            },
            "tags_all": {
              "Name": "us-east-1-allow_ssh_priv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:security-group/sg-0a50722d29d0b0638",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a50722d29d0b0638",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from the internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "us-east-1-allow_ssh",
            "name_prefix": "",
            "owner_id": "149480845956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1-allow_ssh_pub"
            },
            "tags_all": {
              "Name": "us-east-1-allow_ssh_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:network-acl/acl-09ce7cfe884d59b0b",
            "default_network_acl_id": "acl-09ce7cfe884d59b0b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09ce7cfe884d59b0b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "149480845956",
            "subnet_ids": [
              "subnet-00abb9f1f9b8e04ad",
              "subnet-01fb8b54f67286b0f",
              "subnet-05cdecfa9790fa860"
            ],
            "tags": {
              "Name": "us-east-1-vpc-default"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-default"
            },
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:route-table/rtb-0bb340f1a81e80e87",
            "default_route_table_id": "rtb-0bb340f1a81e80e87",
            "id": "rtb-0bb340f1a81e80e87",
            "owner_id": "149480845956",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "us-east-1-vpc-default"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:security-group/sg-0a8eb3604e81ff46a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a8eb3604e81ff46a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "149480845956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1-vpc-default"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-default"
            },
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b82405b6fc8bf72b",
            "arn": "arn:aws:ec2:us-west-2:149480845956:elastic-ip/eipalloc-0b82405b6fc8bf72b",
            "domain": "vpc",
            "id": "eipalloc-0b82405b6fc8bf72b",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-35-31-235.us-west-2.compute.amazonaws.com",
            "public_ip": "52.35.31.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "us-east-1-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:internet-gateway/igw-00680a149055d0c30",
            "id": "igw-00680a149055d0c30",
            "owner_id": "149480845956",
            "tags": {
              "Name": "us-east-1-vpc"
            },
            "tags_all": {
              "Name": "us-east-1-vpc"
            },
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b82405b6fc8bf72b",
            "association_id": "eipassoc-07eafffd517690492",
            "connectivity_type": "public",
            "id": "nat-0aac61eac95b422a6",
            "network_interface_id": "eni-079d51b03930f51ce",
            "private_ip": "10.0.101.68",
            "public_ip": "52.35.31.235",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00abb9f1f9b8e04ad",
            "tags": {
              "Name": "us-east-1-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-us-west-2a"
            }
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ee4ff908593c00e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aac61eac95b422a6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee4ff908593c00e0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00680a149055d0c30",
            "id": "r-rtb-0ace4d4b3af7ad6c81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ace4d4b3af7ad6c8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:route-table/rtb-0ee4ff908593c00e0",
            "id": "rtb-0ee4ff908593c00e0",
            "owner_id": "149480845956",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "us-east-1-vpc-private"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:route-table/rtb-0ace4d4b3af7ad6c8",
            "id": "rtb-0ace4d4b3af7ad6c8",
            "owner_id": "149480845956",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "us-east-1-vpc-public"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033bf1e440b381453",
            "route_table_id": "rtb-0ee4ff908593c00e0",
            "subnet_id": "subnet-0e925c1249b4c5af9"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0031ce1ad7b2912f1",
            "route_table_id": "rtb-0ee4ff908593c00e0",
            "subnet_id": "subnet-01fb8b54f67286b0f"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc246cf7c1cdc037",
            "route_table_id": "rtb-0ace4d4b3af7ad6c8",
            "subnet_id": "subnet-00abb9f1f9b8e04ad"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cc22b0327edafcb",
            "route_table_id": "rtb-0ace4d4b3af7ad6c8",
            "subnet_id": "subnet-05cdecfa9790fa860"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:subnet/subnet-0e925c1249b4c5af9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e925c1249b4c5af9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149480845956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-private-us-west-2a"
            },
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:subnet/subnet-01fb8b54f67286b0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fb8b54f67286b0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149480845956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-private-us-west-2b"
            },
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:subnet/subnet-00abb9f1f9b8e04ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00abb9f1f9b8e04ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149480845956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-vpc-public-us-west-2a"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-public-us-west-2a"
            },
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:subnet/subnet-05cdecfa9790fa860",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cdecfa9790fa860",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149480845956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-vpc-public-us-west-2b"
            },
            "tags_all": {
              "Name": "us-east-1-vpc-public-us-west-2b"
            },
            "vpc_id": "vpc-0413f362c5eaa0ab2"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:149480845956:vpc/vpc-0413f362c5eaa0ab2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ce7cfe884d59b0b",
            "default_route_table_id": "rtb-0bb340f1a81e80e87",
            "default_security_group_id": "sg-0a8eb3604e81ff46a",
            "dhcp_options_id": "dopt-04981cf1859498201",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0413f362c5eaa0ab2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb340f1a81e80e87",
            "owner_id": "149480845956",
            "tags": {
              "Name": "us-east-1-vpc"
            },
            "tags_all": {
              "Name": "us-east-1-vpc"
            }
          }
        }
      ]
    }
  ]
}